Mon Mar 20 18:19:06 2000  Gray Watson  <gray@whopper.256.com>

	* Releasing dmalloc version 4.4.0 beta 1.

	* Removed usage of PTHREAD_MUTEX_INITIALIZER which was delaying
	the mutex-init call.

	* Added code to fix some recursive problems with open and atexit.

	* Basically encorporated Randell's changes [finally].  Thanks for
	your patience dude.

	* Removed the stupid chunk.c unions.  Why did I ever do that?  It
	made debugging and absolute bear.

	* www.dmalloc.com -> dmalloc.com.

Mon Mar  6 12:05:01 2000  Gray Watson  <gray@burger.256.com>

	* Added better help messages to dmalloc.

Thu Feb 17 09:04:19 2000  Gray Watson  <gray@burger.256.com>

	* Fixed Makefile.dep creation with _th.o special objects.

	* Fixed the outputting of gratuitous colons.

	* Added @uref texinfo tags and new texinfo.tex.

Mon Nov  8 15:39:44 1999  Gray Watson  <gray@burger.256.com>

	* Releasing dmalloc version 4.3.0.

	* Fixed some problems with char * instead of void *.

Mon Oct 18 12:09:30 1999  Gray Watson  <gray@burger.256.com>

	* Added info about log-unknown to the Getting Started section and
	more info about ident.

Fri Oct 15 18:13:39 1999  Gray Watson  <gray@burger.256.com>

	* Added power pc return.h macros from Shawn.

Thu Oct 14 10:08:58 1999  Gray Watson  <gray@burger.256.com>

	* Releasing dmalloc version 4.3.0 beta 3.

	* Darn.  Missed malloc.h in the port file.

Wed Oct 13 18:38:26 1999  Gray Watson  <gray@burger.256.com>

	* Releasing dmalloc version 4.3.0 beta 2.

	* Changed #ifdef USE_DMALLOC_LEAP -> #if USE_DMALLOC_LEAP.  Doh.

Mon Oct 11 12:37:13 1999  Gray Watson  <gray@burger.256.com>

	* Releasing dmalloc version 4.3.0 beta 1.

	* Fixed problems on Linux with the strdup macro.

Wed Aug 25 08:33:39 1999  Gray Watson  <gray@burger.256.com>

	* Added copyright and url info for ident and what.

	* Added support for PTHREAD_MUTEX_INITIALIZER.

Tue Jul 20 12:47:14 1999  Gray Watson  <gray@burger.256.com>
