@@ -1,7 +1,7 @@
 /*
  * Automatic configuration flags
  *
- * Copyright 1999 by Gray Watson
+ * Copyright 2000 by Gray Watson
  *
  * This file is part of the dmalloc package.
  *
@@ -18,7 +18,7 @@
  *
  * The author may be contacted via http://dmalloc.com/
  *
- * $Id: conf.h.in,v 1.80 2000/03/20 23:19:21 gray Exp $
+ * $Id: conf.h.in,v 1.81 2000/03/21 18:19:08 gray Exp $
  */
 
 #ifndef __CONF_H__
