@@ -1,7 +1,7 @@
 /*
  * Defines for the dmalloc library
  *
- * Copyright 1999 by Gray Watson
+ * Copyright 2000 by Gray Watson
  *
  * This file is part of the dmalloc package.
  *
@@ -18,7 +18,7 @@
  *
  * The author may be contacted via http://dmalloc.com/
  *
- * $Id: dmalloc.h.1,v 1.12 2000/03/20 23:19:23 gray Exp $
+ * $Id: dmalloc.h.1,v 1.13 2000/03/21 18:19:10 gray Exp $
  */
 
 #ifndef __DMALLOC_H__
