@@ -21,7 +21,7 @@
 @c ================================================================
 
 @c ================================================================
-@c $Id: dmalloc.texi,v 1.175 2000/03/21 01:47:21 gray Exp $
+@c $Id: dmalloc.texi,v 1.176 2000/03/21 18:19:10 gray Exp $
 @c ================================================================
 
 @ifinfo
@@ -133,7 +133,7 @@ Gray Watson.
 @cindex library permissions
 @cindex permissions of the library
 
-Copyright 1992 to 1999 by Gray Watson.
+Copyright 1992 to 2000 by Gray Watson.
 
 Permission to use, copy, modify, and distribute this software for any
 purpose and without fee is hereby granted, provided that the above
